--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,3 +4,32 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.app {
+  padding: 50px;
+}
+
+form {
+  width: 50%;
+}
+
+ul {
+  padding-left: 0;
+  margin-top: 30px;
+  width: 70%;
+}
+
+li {
+  margin-top: 15px;
+}
+
+li span.done {
+  text-decoration: line-through;
+  color: #757575;
+}
+
+@media screen and (max-width: 767px) {
+  form, ul {
+    width: 100%;
+  }
+}
